src/components/carousel/styles.scss
#image1 {
  height: 40vh;
  background-image: url(./../../assets/asparagus.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

#image2 {
  height: 40vh;
  background-image: url(./../../assets/onions.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

#image3 {
  height: 40vh;
  background-image: url(./../../assets/chard.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

#image4 {
  height: 40vh;
  background-image: url(./../../assets/flowers.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

#image5 {
  height: 40vh;
  background-image: url(./../../assets/kids.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.slides {
  position: relative;
  .slick-prev, .slick-next {
    position: absolute;
    top: 50%;
    z-index: 1;
  }
  .slick-prev {
    left: 6%;
  }
  .slick-next {
    right: 6%;
  }
}

.overlay {
  background: rgba(black, 0.3);
  width: 80%;
  height: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: absolute;
  left: 10%;
  top: 25%;
}

.overlay a {
  color: white;
  font-size: 4vw;
  z-index: 1;
}


.overlay p {
  color: white;
  font-size: 2.5vw;
}

